# burniso-tauri

./: .gitignore  CODE_REVIEW.md  README.md  ROADMAP.md  package-lock.json  package.json
.trunk/: trunk.yaml
src/: help.html  help.js  i18n.js  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/i18n/: de.json  en.json
