[package]
name = "burniso-usb"
version = "1.0.0"
description = "Burn ISO to USB und USB Backup Tool für macOS"
authors = ["nojan"]
edition = "2021"

[lib]
name = "burniso_usb_lib"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex-lite = "0.1"
