[package]
name = "burniso-usb"
version = "1.4.0"
description = "Burn ISO to USB und USB Backup Tool für macOS"
authors = ["nojan"]
edition = "2021"

[lib]
name = "burniso_usb_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "=2.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex-lite = "0.1"
tokio = { version = "1", features = ["rt", "sync", "time"] }
tauri-plugin-notification = "2.3.3"
libc = "0.2.178"
chrono = "0.4"
